--- a/Fawcett/Fawcett.html
+++ b/Fawcett/Fawcett.html
@@ -31,6 +31,68 @@
 <div class="mySlides" style="text-align: center;"><img src="Fawcett11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fawcett12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fawcett13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett26.jpg" title="Cowboy Love"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett75.jpg" title="Dennis in Hawaii"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett27.jpg" title="Don Winslow"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett68.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett69.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett70.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett71.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett72.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett73.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fawcett74.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -87,6 +149,7 @@ Titles
 <li><a href="Fawcett24.jpg">Captain Video</a> (1951)
 <li><a href="Fawcett25.jpg">Comic Comics</a> (1946)
 <li><a href="Fawcett26.jpg">Cowboy Love</a> (1949)
+<li><a href="Fawcett75.jpg">Dennis In Hawaii</a> (1962)
 <li><a href="Fawcett27.jpg">Don Winslow of the Navy</a> (1943) 
 <li><a href="Fawcett28.jpg">Down with Crime</a> (1951)
 <li><a href="Fawcett29.jpg">Exciting Romances</a> (1949)
