--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 
 <tr>
 <td>3-D Alien Terror</td>
-<td>1986</a>
-<td>Eclipse
+<td>1986</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -185,8 +185,8 @@
 
 <tr>
 <td>3-D Laser Eraser And Pressbutton</td>
-<td>1986</a>
-<td>Eclipse
+<td>1986</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -1910,8 +1910,8 @@
 
 <tr>
 <td>Aces</td>
-<td>1988</a>
-<td>Eclipse
+<td>1988</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -2225,8 +2225,8 @@
 
 <tr>
 <td>Adolescent Radioactive Black Belt Hamsters</td>
-<td>1986</a>
-<td>Eclipse
+<td>1986</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -3092,15 +3092,15 @@
 
 <tr>
 <td>Air Fighters Classics</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Air Fighters Meet Sgt. Strike Special</td>
-<td>1988</a>
-<td>Eclipse
+<td>1988</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -3134,8 +3134,8 @@
 
 <tr>
 <td>Airboy</td>
-<td>1986</a>
-<td>Eclipse
+<td>1986</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -3148,22 +3148,22 @@
 
 <tr>
 <td>Airboy Meets The Prowler</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Airboy Versus The Airmaidens</td>
-<td>1988</a>
-<td>Eclipse
+<td>1988</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Airboy: Mr. Monster Special</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -3190,8 +3190,8 @@
 
 <tr>
 <td>Airmaidens Special</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -3878,8 +3878,8 @@
 
 <tr>
 <td>Alien Worlds</td>
-<td>1984</a>
-<td>Eclipse
+<td>1984</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -4578,8 +4578,8 @@
 
 <tr>
 <td>Allan W. Eckert's Tecumseh!</td>
-<td>1992</a>
-<td>Eclipse
+<td>1992</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -4963,8 +4963,8 @@
 
 <tr>
 <td>Amazing Cynicalman</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -6475,8 +6475,8 @@
 
 <tr>
 <td>Appleseed</td>
-<td>1988</a>
-<td>Eclipse
+<td>1988</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -6762,8 +6762,8 @@
 
 <tr>
 <td>Area 88</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -6818,8 +6818,8 @@
 
 <tr>
 <td>Ariane &amp; Bluebeard</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -8568,7 +8568,7 @@
 <tr>
 <td>Axa</td>
 <td>1981</a>
-<td>Eclipse
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -8588,8 +8588,8 @@
 
 <tr>
 <td>Axel Pressbutton</td>
-<td>1984</a>
-<td>Eclipse
+<td>1984</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -8623,8 +8623,8 @@
 
 <tr>
 <td>Aztec Ace</td>
-<td>1984</a>
-<td>Eclipse
+<td>1984</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -8826,8 +8826,8 @@
 
 <tr>
 <td>Back Down The Line</td>
-<td>1991</a>
-<td>Eclipse
+<td>1991</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -9728,8 +9728,8 @@
 
 <tr>
 <td>Batman &amp; Me</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -10260,8 +10260,8 @@
 
 <tr>
 <td>Bedlam</td>
-<td>1985</a>
-<td>Eclipse
+<td>1985</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -10651,8 +10651,8 @@
 
 <tr>
 <td>Berni Wrightson: Master Of The Macabre </td>
-<td>1984</a>
-<td>Eclipse
+<td>1984</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -12165,8 +12165,8 @@
 
 <tr>
 <td>Black Magic</td>
-<td>1990</a>
-<td>Eclipse
+<td>1990</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -12333,8 +12333,8 @@
 
 <tr>
 <td>Black Terror</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -12585,8 +12585,8 @@
 
 <tr>
 <td>Blandman</td>
-<td>1992</a>
-<td>Eclipse
+<td>1992</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -12886,8 +12886,8 @@
 
 <tr>
 <td>Blood Is The Harvest</td>
-<td>1992</a>
-<td>Eclipse
+<td>1992</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -13354,8 +13354,8 @@
 
 <tr>
 <td>Bob Powell's Timeless Tales</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -13452,8 +13452,8 @@
 
 <tr>
 <td>Bogie</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -13900,8 +13900,8 @@
 
 <tr>
 <td>Born To Be Wild</td>
-<td>1991</a>
-<td>Eclipse
+<td>1991</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -14775,8 +14775,8 @@
 
 <tr>
 <td>Brought To Light</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -15013,8 +15013,8 @@
 
 <tr>
 <td>Bullet Crow, Fowl Of Fortune</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -15252,7 +15252,7 @@
 <tr>
 <td>Buster Keaton</td>
 <td>1982</a>
-<td>Eclipse
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -15510,8 +15510,8 @@
 
 <tr>
 <td>California Girls</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -15692,8 +15692,8 @@
 
 <tr>
 <td>Cap'n Quick And A Foozle</td>
-<td>1984</a>
-<td>Eclipse
+<td>1984</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -15895,8 +15895,8 @@
 
 <tr>
 <td>Captain EO 3-D</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -17295,8 +17295,8 @@
 
 <tr>
 <td>Champions</td>
-<td>1986</a>
-<td>Eclipse
+<td>1986</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -18560,8 +18560,8 @@
 
 <tr>
 <td>Clint</td>
-<td>1986</a>
-<td>Eclipse
+<td>1986</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -18665,22 +18665,22 @@
 
 <tr>
 <td>Clive Barker: Revelations</td>
-<td>1992</a>
-<td>Eclipse
+<td>1992</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Clive Barker: Son Of Celluloid</td>
-<td>1991</a>
-<td>Eclipse
+<td>1991</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Clive Barker: The Life Of Death</td>
-<td>1993</a>
-<td>Eclipse
+<td>1993</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -19350,8 +19350,8 @@
 
 <tr>
 <td>Comics Express</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -19518,8 +19518,8 @@
 
 <tr>
 <td>Complete Alec</td>
-<td>1990</a>
-<td>Eclipse
+<td>1990</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -19630,8 +19630,8 @@
 
 <tr>
 <td>Complete Pogo Comics</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -19881,7 +19881,7 @@
 
 <tr>
 <td>Contractors</td>
-<td>1987</a>
+<td>1987</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
@@ -20945,14 +20945,14 @@
 
 <tr>
 <td>Crossfire</td>
-<td>1984</a></td>
+<td>1984</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Crossfire &amp; Rainbow</td>
-<td>1986</a></td>
+<td>1986</td></td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
@@ -21441,15 +21441,15 @@
 
 <tr>
 <td>Cyber 7</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Cyber 7: Book Two</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -22673,8 +22673,8 @@
 
 <tr>
 <td>Daughters Of Fly In My Eye</td>
-<td>1990</a>
-<td>Eclipse
+<td>1990</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -22743,8 +22743,8 @@
 
 <tr>
 <td>David Chelsea In Love</td>
-<td>1991</a>
-<td>Eclipse
+<td>1991</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -24093,6 +24093,13 @@
 </tr>
 
 <tr>
+<td>Dennis In Hawaii</td>
+<td>1962</td>
+<td>Fawcett</td>
+<td><a href="DennisInHawaii/DennisInHawaii.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dennis The Menace</td>
 <td>1951</td>
 <td>King Features</td>
@@ -24213,8 +24220,8 @@
 
 <tr>
 <td>Destroy!!</td>
-<td>1986</a>
-<td>Eclipse
+<td>1986</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -24255,15 +24262,15 @@
 
 <tr>
 <td>Detectives, Inc</td>
-<td>1985</a>
-<td>Eclipse
+<td>1985</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Detectives, Inc: A Terror Of Dying Dreams</td>
-<td>1985</a>
-<td>Eclipse
+<td>1985</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -24779,8 +24786,8 @@
 
 <tr>
 <td>Dinosaurs Attack!</td>
-<td>1991</a>
-<td>Eclipse
+<td>1991</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -24814,8 +24821,8 @@
 
 <tr>
 <td>Directory To A Non-Existent Universe</td>
-<td>1987</a>
-<td>Eclipse
+<td>1987</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -24835,8 +24842,8 @@
 
 <tr>
 <td>Dirty Pair</td>
-<td>1988</a>
-<td>Eclipse
+<td>1988</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -24891,8 +24898,8 @@
 
 <tr>
 <td>Dishman</td>
-<td>1988</a>
-<td>Eclipse
+<td>1988</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -25137,7 +25144,7 @@
 <tr>
 <td>DNAgents</td>
 <td>1983</a>
-<td>Eclipse
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -25570,8 +25577,8 @@
 
 <tr>
 <td>Dominion</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -26074,8 +26081,8 @@
 
 <tr>
 <td>Downside</td>
-<td>1993</a>
-<td>Eclipse
+<td>1993</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -26221,8 +26228,8 @@
 
 <tr>
 <td>Dr. Watchstop</td>
-<td>1989</a>
-<td>Eclipse
+<td>1989</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -26382,8 +26389,8 @@
 
 <tr>
 <td>Dragon Chiang</td>
-<td>1991</a>
-<td>Eclipse
+<td>1991</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -26494,8 +26501,8 @@
 
 <tr>
 <td>Dragonflight</td>
-<td>1991</a>
-<td>Eclipse
+<td>1991</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -26641,8 +26648,8 @@
 
 <tr>
 <td>Dread</td>
-<td>1992</a>
-<td>Eclipse
+<td>1992</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -26718,8 +26725,8 @@
 
 <tr>
 <td>Dreamery</td>
-<td>1986</a>
-<td>Eclipse
+<td>1986</td>
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
@@ -53217,6 +53224,13 @@
 </tr>
 
 <tr>
+<td>Ms. Tree's Thrilling Detective Adventures</td>
+<td>1983</td>
+<td>Eclipse</td>
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ms. Victory Special</td>
 <td>1985</td>
 <td>AC Comics</td>
@@ -73069,6 +73083,13 @@
 <td>2009</td>
 <td>Tidalwave</td>
 <td><a href="Tidalwave/Tidalwave.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tom Scioli</td>
+<td>1977</td>
+<td>Creator</td>
+<td><a href="TomScioli/TomScioli.html">Details</a></td>
 </tr>
 
 <tr>
