--- a/UmbrellaAcademy/UmbrellaAcademy.html
+++ b/UmbrellaAcademy/UmbrellaAcademy.html
@@ -8,12 +8,32 @@
 </head>
 
 <body>
-<img src="UmbrellaAcademy.jpg"> <br>
-Series: 12 issues, 2 collection TPB 2008 <br>
-Written by Gerard Way<br>
-Illustrated by Gabriel Bá<br>
-Publisher: Dark Horse<br>
+<img src="UmbrellaAcademy.jpg">
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="UmbrellaAcademy.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UmbrellaAcademy1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UmbrellaAcademy2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UmbrellaAcademy3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UmbrellaAcademy4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UmbrellaAcademy5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UmbrellaAcademy6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UmbrellaAcademy7.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+12 issues, 2 collection TPB started in 2008 by Dark Horse. 3 season TV series started in 2019 by Netflix.<br>
+Written by Gerard Way, Illustrated by Gabriel Bá.   
+</p><p>
 The first six-issue limited series, The Umbrella Academy: Apocalypse Suite, was released by Dark Horse Comics, the first issue was released on September 19, 2007.  It won the 2008 Eisner Award for Best Finite Series/Limited Series. A second series, The Umbrella Academy: Dallas, followed in 2008. 
 </p><p>
 The Umbrella Academy: Hotel Oblivion, and a proposed fourth series, are in development. A television adaptation was announced to be in development in July 2015.
