--- a/ACG/ACG.html
+++ b/ACG/ACG.html
@@ -36,7 +36,7 @@
 <div class="mySlides" style="text-align: center;"><img src="ACG16.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG17.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG18.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../JamesOBarr/JamesOBarr.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../JamesOBarr/JamesOBarr1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG20.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG21.jpg"></div>
