--- a/AntarcticPress/AntarcticPress.html
+++ b/AntarcticPress/AntarcticPress.html
@@ -117,6 +117,42 @@
 <div class="mySlides" style="text-align: center;"><img src="AntarcticPress98.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AntarcticPress99.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AntarcticPress100.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress101.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress102.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress103.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress104.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress105.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress106.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress107.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress108.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress109.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress110.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress111.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress112.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress113.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress114.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress115.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress116.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress117.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress118.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress119.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress120.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress121.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress122.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress123.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress124.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress125.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress126.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress127.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress128.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress129.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress130.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress131.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress132.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress133.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress134.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress135.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress136.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
