--- a/index.html
+++ b/index.html
@@ -58380,6 +58380,13 @@
 </tr>
 
 <tr>
+<td>Pink Panther</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMysthology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pig Tale</td>
 <td>2005</td>
 <td>Image</td>
